--- a/hello.html
+++ b/hello.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    <h1>My name is Vlad!</h1>
+    <h1 style="color:blue;">My name is Vlad!</h1>
     <h2>I like to suck titties</h2>
     Hello World!
 </body>
